test/parser/prs/internal-node-05.stderr
At: "internal-node-05.hac":7:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(process-prototype) [5:1..27]
#STATE#	{ [5:29]
#STATE#	keyword: prs [6:1..3]
#STATE#	(null) 
#STATE#	{ [6:5]
#STATE#	(logical-expr) [7:2..6]
#STATE#	-> [7:9]
#STATE#	@ [7:12]
#STATE#	identifier: z [7:13]
#STATE#	. [7:14]
in state #STATE#, possible rules are:
	prs_literal_base : '@' ID . optional_dense_range_list  (#RULE#)
	optional_dense_range_list : .  (#RULE#)
acceptable tokens are: 
	'&' (reduce)
	'(' (reduce)
	')' (reduce)
	'+' (reduce)
	'-' (reduce)
	'<' (reduce)
	'[' (shift)
	'|' (reduce)
	'}' (reduce)
	IMPLIES (reduce)
	RARROW (reduce)
